# openai-practice

./: Q&A_Doc.ipynb  SummaryNotebook.ipynb  pyproject.toml
