[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.3"
langchain = "^0.0.150"
chromadb = "^0.3.21"
setuptools = "^67.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
